--- a/测试分类.md
+++ b/测试分类.md
@@ -1,14 +1,11 @@
-按开发阶段:
-单元测试，集成测试，系统测试，验收测试
-按照是否查看代码：
-黑盒测试，白盒测试，灰盒测试
-按照是否运行：
-静态测试，动态测试
-按照测试对象：
-性能测试，安全测试，兼容性测试，文档测试，用户体验测试，业务测试，界面测试，安装测试，内存泄露测试
-测试实施的组织：
-阿尔法测试，贝塔测试，第三方测试
-是否手工执行：
-手工测试，自动化测试
-其它分类:
-冒烟测试，回归测试
+|按开发阶段  |是否查看代码 |是否运行   |测试对象    |实施的组织  |是否手工    |其它|
+|:--------  |:---------- |:------   |:-------    |:--------  |:------    |:---|
+|单元测试    |黑盒测试    |静态测试   |性能测试     |阿尔法测试  |手工测试    |冒烟测试|
+|集成测试    |白盒测试    |动态测试   |安全测试     |贝塔测试    |自动化测试  |回归测试|
+|系统测试    |灰盒测试    |           |兼容性测试  |第三方测试|
+|验收测试    |           |           |文档测试
+|           |           |           |用户体验测试
+|           |           |           |业务测试
+|           |           |           |界面测试
+|           |           |           |安装测试
+|           |           |           |内存泄露测试
